; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_1750.c_directconnect.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_1750.c_directconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netaddr = type { i32* }

@.str = private unnamed_addr constant [40 x i8] c"directconnect(): %d.%d.%d.%d connected\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @directconnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @directconnect(i32* %0) #0 {
  %2 = alloca %struct.netaddr, align 8
  %3 = getelementptr inbounds %struct.netaddr, %struct.netaddr* %2, i32 0, i32 0
  store i32* %0, i32** %3, align 8
  %4 = getelementptr inbounds %struct.netaddr, %struct.netaddr* %2, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = getelementptr inbounds i32, i32* %5, i64 0
  %7 = load i32, i32* %6, align 4
  %8 = getelementptr inbounds %struct.netaddr, %struct.netaddr* %2, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 1
  %11 = load i32, i32* %10, align 4
  %12 = getelementptr inbounds %struct.netaddr, %struct.netaddr* %2, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 2
  %15 = load i32, i32* %14, align 4
  %16 = getelementptr inbounds %struct.netaddr, %struct.netaddr* %2, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 3
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32 %7, i32 %11, i32 %15, i32 %19)
  %21 = getelementptr inbounds %struct.netaddr, %struct.netaddr* %2, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = call i32 @_directconnect(i32* %22)
  ret void
}

declare dso_local i32 @printf(i8*, i32, i32, i32, i32) #1

declare dso_local i32 @_directconnect(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
